[package]
name = "power-observers"
version = "0.1.0"
authors = ["filu <mihumihu32@gmail.com>"]
edition = "2018"
resolver = "2"

[patch.crates-io]
# smol = { git = "https://github.com/esp-rs-compat/smol" }
# polling = { git = "https://github.com/esp-rs-compat/polling" }
# socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
# getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
anyhow = {version = "1", features = ["backtrace"]}
esp-idf-hal = "0.37.4"
log = "0.4.17"
embedded-hal = "0.2.7"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
